# Renderer

./: CMakeLists.txt  README.md  main.cpp
Tests/: sphereTests.cpp
complexShapes/: Box.cpp  Cube.cpp  House.cpp  Pyramid.cpp  StreetLamp.cpp
geometries/: Cylinder.cpp  Ellipsoid.cpp  Geometries.cpp  Geometry.cpp  Intersectable.cpp  Plane.cpp  Polygon.cpp  Sphere.cpp  Triangle.cpp  Tube.cpp
images/: Ellipse.ppm  StreepLamp.ppm  base render test.ppm  car.ppm  color render test.ppm  cup.ppm  grid test.ppm  human.ppm  lightSphereDirectional.ppm  lightSphereDirectionalAA.ppm  lightSpherePoint.ppm  lightSphereSpot.ppm  lightSphereSpotSharp.ppm  lightTrianglesDirectional.ppm  lightTrianglesPoint.ppm  lightTrianglesSpot.ppm  lightTrianglesSpotSharp.ppm  multipleLightSphere.ppm  multipleLightTriangles.ppm  polygon.ppm  reflectionTwoSpheresMirrored.ppm  refractionShadow.ppm  refractionTwoSpheres.ppm  shadowTrianglesSphere.ppm
include/: ObjParser.h  Util.h
include/copmlexShapes/: Box.h  Cube.h  House.h  Pyramid.h  StreetLamp.h
include/geometries/: Cylinder.h  Ellipsoid.h  GeoPoint.h  Geometries.h  Geometry.h  Intersectable.h  Plane.h  Polygon.h  Sphere.h  Triangle.h  Tube.h
include/lights/: AmbientLight.h  DirectionalLight.h  Light.h  LightSource.h  PointLight.h  SpotLight.h
include/primitives/: Color.h  (+4 more)
lights/: AmbientLight.cpp  DirectionalLight.cpp  Light.cpp  LightSource.cpp  PointLight.cpp  SpotLight.cpp
primitives/: Color.cpp  GeoPoint.cpp  Material.cpp  Point.cpp  Ray.cpp  Util.cpp  Vector.cpp
renderer/: Camera.cpp  ImageWriter.cpp  RayTracer.cpp  Scene.cpp
(+9 files in other folders)
